--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,23 @@
     <color name="colorPrimary">#795548</color>
     <color name="colorAccent">#FF4081</color>
 
+
+
+    <color name="global_black_lv1">#1D1D1D</color>
+    <color name="global_black_lv2">#252525</color>
+    <color name="global_black_lv3">#212121</color>
+    <color name="global_black_lv4">#878787</color>
+
+    <color name="global_gray_lv1">#7c7c7c</color>
+    <color name="global_gray_lv2">#9d9d9d</color>
+    <color name="global_gray_lv3">#E8E8E8</color>
+    <color name="global_gray_lv4">#EBEBEB</color>
+
     <!--dialog-->
     <color name="common_bg_color">#F2F2FD</color>
     <color name="press_btn_color">#ddd</color>
     <color name="white">#ffffff</color>
-
     <color name="global_background">#e4e4e4</color>
+
+    <color name="global_base_0">#E53935</color>
 </resources>
